# Code_example

catkin_ws/src/continuous_slopes/: CMakeLists.txt  package.xml
catkin_ws/src/continuous_slopes/msg/: exo_output.msg
catkin_ws/src/continuous_slopes/src/: CPG.cpp  CPG.h  Evolutionary.cpp  Evolutionary.h  Exo_interface.cpp  Exo_interface.h  LinearAlgebra.cpp  LinearAlgebra.h  fixedNeuralNet.cpp  networkTester.cpp
